# oSBM

./: .gitignore  AGENTS.md  README.md
.github/workflows/: android-manual.yml  ios-manual.yml  pc-manual.yml
assets/opensb/: default_actor_movement.config.patch  default_movement.config.patch
doc/: optimization-history.md
docs/agents/: build-and-validation.md  platform-boundaries.md  repository-map.md
scripts/switch/: apply-toolchain-patches.sh
source/: CMakeLists.txt  CMakePresets.json  vcpkg.json
source/application/: CMakeLists.txt  StarApplicationController.hpp  StarMainApplication.hpp  StarMainApplication_mobile_sdl.cpp  StarMainApplication_sdl.cpp  StarPlatformServices_mobile.cpp  StarPlatformServices_mobile.hpp  StarRenderer.hpp  StarRenderer_gles.cpp  StarRenderer_gles.hpp  StarRenderer_opengl.cpp  StarRenderer_opengl.hpp
source/application/mobile/: StarMobileAndroidGyro.cpp  StarMobileAndroidGyro.hpp  StarMobileControls.cpp  StarMobileControls.hpp  StarMobileLauncherSupport.cpp  StarMobileLauncherSupport.hpp  StarMobilePlatform.cpp  StarMobilePlatform.hpp
source/application/mobile/android/: StarAndroidFileAccessBridge.cpp  StarAndroidFileAccessBridge.hpp
source/application/mobile/android/host/: gradle.properties  settings.gradle
source/application/mobile/android/host/app/: build.gradle
source/application/mobile/android/host/app/src/main/: AndroidManifest.xml
source/application/mobile/android/host/app/src/main/assets/lang/: en_US.lang  zh_CN.lang
source/application/mobile/android/host/app/src/main/java/io/github/openstarbound/mobile/: MainActivity.java
source/application/mobile/android/host/app/src/main/java/org/libsdl/app/: SDLActivity.java  SDLDummyEdit.java  SDLInputConnection.java  SDLSurface.java
source/application/mobile/android/host/app/src/main/res/values/: styles.xml
source/application/mobile/ios/: StarIosFileAccessBridge.cpp  StarIosFileAccessBridge.hpp  StarIosFileAccessBridgeObjC.mm  StarIosVsyncPacer.hpp  StarIosVsyncPacerObjC.mm
source/application/mobile/switch/: StarSwitchCompat.c  StarSwitchPlatform.cpp  StarSwitchPlatform.hpp
source/base/: StarAssets.cpp  StarAssets.hpp  StarPackedAssetSource.cpp
source/client/: CMakeLists.txt  StarClientApplication.cpp  StarClientApplication.hpp
source/core/: CMakeLists.txt  StarBTreeDatabase.cpp  StarDynamicLib_unix.cpp  StarException_unix.cpp  StarFile.cpp  StarFile_unix.cpp  StarFont.cpp  StarFont.hpp  StarInputEvent.cpp  StarInputEvent.hpp  StarLogging.cpp  StarLogging.hpp  StarLua.cpp  StarLua.hpp  StarRandomPoint.hpp  StarSpatialHash2D.hpp  StarThread_unix.cpp
source/frontend/: StarActionBar.cpp  StarActionBar.hpp  StarBaseScriptPane.cpp  StarCharCreation.cpp  StarMainInterface.cpp  StarMainInterface.hpp  StarTeamBar.cpp  StarVoiceLuaBindings.cpp
source/game/: StarActorMovementController.cpp  StarActorMovementController.hpp  StarBehaviorDatabase.cpp  StarCelestialDatabase.cpp  StarCelestialParameters.cpp  StarCelestialParameters.hpp  StarDungeonGenerator.cpp  StarDungeonGenerator.hpp  StarDungeonImagePart.cpp  StarDungeonImagePart.hpp  StarEffectEmitter.cpp  StarEffectEmitter.hpp  StarEntityMap.cpp  StarEntityMap.hpp  StarItemDatabase.cpp  StarMonster.cpp  StarMonster.hpp  StarMovementController.cpp  StarMovementController.hpp  StarNetPacketSocket.cpp  StarNetworkedAnimator.cpp  StarNetworkedAnimator.hpp  StarPlant.cpp  StarPlayer.cpp  StarPlayer.hpp  StarPlayerStorage.cpp  StarRoot.cpp  StarRoot.hpp  StarRootLoader.cpp  StarStatusController.cpp  StarSystemWorld.cpp  StarSystemWorld.hpp  StarSystemWorldServerThread.cpp  StarSystemWorldServerThread.hpp  StarUniverseClient.cpp  StarUniverseClient.hpp  StarUniverseServer.cpp  StarUniverseServer.hpp  StarWeather.cpp  StarWeather.hpp  (+11 more)
source/platform/: CMakeLists.txt  StarExternalFileAccessService.hpp  StarLaunchConfigService.hpp  StarMobileSystemUiService.hpp
source/rendering/: StarDrawablePainter.cpp  StarDrawablePainter.hpp  StarEnvironmentPainter.cpp  StarEnvironmentPainter.hpp  StarTilePainter.cpp  StarTilePainter.hpp  StarWorldPainter.cpp  StarWorldPainter.hpp
source/test/: StarTestUniverse.cpp
source/utility/: CMakeLists.txt  world_benchmark.cpp
toolchains/patches/: README.md  (+3 more)
triplets/: arm-neon-android-mixed.cmake  arm64-ios-mixed.cmake  x64-android-mixed.cmake
(+13 files in other folders)
